--- a/vbacGUI/src/製造管理システム (13).accdb/cls_建具製造関数.cls
+++ b/vbacGUI/src/製造管理システム (13).accdb/cls_建具製造関数.cls
@@ -1003,9 +1003,16 @@ Public Property Get •\–ÊŞŒú‚İ2() As Variant
 End Property
 
 Public Property Get c‘gÚ×}() As String
-    
+   
+'2.13.0
+'   ¨H2700‚ª˜R‚ê‚Ä‚¢‚½‚½‚ß’Ç‰Á
+
     With inArgument
-        c‘gÚ×} = fncstrShingumiShousai(.inŒŸõ•i”Ô, .inDH)
+        If .inDH > 2589 Then
+            c‘gÚ×} = fncstrShingumiShousai2700(.inŒŸõ•i”Ô, .inDH, .in{ù)
+        Else
+            c‘gÚ×} = fncstrShingumiShousai(.inŒŸõ•i”Ô, .inDH)
+        End If
     End With
     
 End Property
